# firefly-iii-rust

./: Cargo.toml  LICENSE  README.md  flake.nix  integration_test_setup.sql  start_integration_test_infra
src/: account.rs  client.rs  error.rs  http.rs  lib.rs  transaction.rs
src/requests/: mod.rs
src/response/: mod.rs
tests/: account_integration_test.rs  transactions_integration_test.rs
