[package]
name = "firefly-iii-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
serde = { version = "1.0.216", features = ["derive"] }
thiserror = "2.0.9"
ureq = { version = "2.12.1", features = ["json"] }
